Fix empty white area in map tab on mobile

--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -60,9 +60,9 @@
 
 .map-placeholder {
   position: absolute;
-  top: 20.9rem;
+  top: 16.4rem;
   right: 0;
-  bottom: 5.7rem;
+  bottom: 4.5rem;
   left: 0;
   background-color: #808080;
 
